--- a/fr/assets/css/lxb_togo.css
+++ b/fr/assets/css/lxb_togo.css
@@ -160,6 +160,11 @@
 
         }
 
+        .LXB_TOGO-subscribe_form-input {
+            background: #E0E2E5;
+            border-radius: 30px;
+            padding: 5px 25px;
+        }
 
 
 
