--- a/fr/assets/css/lxb_togo.css
+++ b/fr/assets/css/lxb_togo.css
@@ -102,6 +102,7 @@
      */
         .LXB_TOGO-post {
             display: flex;
+            align-items: flex-start;
             gap: 30px;
         }
 
