--- a/fr/assets/css/lxb_togo.css
+++ b/fr/assets/css/lxb_togo.css
@@ -3,9 +3,9 @@
  * 2. Nav
  * 3. Content
  *     3.1. Elements
- *     3.2. Posts
- *     3.3. Pagination
- *     3.4. Single Post    
+ *     3.2. Index Posts
+ *     3.3. Single Post
+ *     3.4. Pagination 
  *     3.5. Icon Links
  *     3.6. Subscribe
  */
@@ -64,28 +64,59 @@
         }
 
     /**
-     * 3.2. Posts
+     * 3.2. Index Posts
      */
 
-        .LXB_TOGO-post-index-item-header {
-            padding: 0 0 40px 0;
-            display: flex;
-            align-items: top;
-            gap: 80px;
-            justify-content: space-between;    
+        .LXB_TOGO-posts-index-inner {
+            display: grid;
+            gap: 50px;
         }
 
-        .LXB_TOGO-post-index-item-header .LXB_TOGO-image-img {
-            border-radius: 10px;
-            max-width: 200px;
-            order: 2;
+        .LXB_TOGO-post-index-item {
+            display: flex;
+            align-items: start;
+            gap: 80px;
+            justify-content: space-between;   
+        }
+
+        .LXB_TOGO-post-index-item-header {
+            padding: 0 0 20px 0; 
+        }
+
+        .LXB_TOGO-post-index-item-header_and_main {
+            width: 80%;
+            flex: 1;
+        }
+
+        .LXB_TOGO-posts-index-inner .LXB_TOGO-post-index-item:first-child .LXB_TOGO-post-index-item-header_and_main {
+            width: 60%;
+            flex: 1;          
         }
 
         .LXB_TOGO-post-index-item-header-title {
             font-size: 30px;
             line-height: 42px;
             letter-spacing: 0.25px;
-            font-weight: 600;    
+            font-weight: 600; 
+            margin-bottom: 10px;   
+        }
+
+        .LXB_TOGO-posts-index-inner .LXB_TOGO-post-index-item:first-child .LXB_TOGO-post-index-item-header-title {
+            font-size: 40px;
+            line-height: 43px;
+            letter-spacing: 0.5px;
+            font-weight: 900;   
+        }
+
+        .LXB_TOGO-post-index-item .LXB_TOGO-image-img {
+            border-radius: 10px;
+            width: 20%;
+            order: 2;
+        }
+
+        .LXB_TOGO-posts-index-inner .LXB_TOGO-post-index-item:first-child .LXB_TOGO-image-img {
+            width: 40%;
+            height: auto;
         }
 
         .LXB_TOGO-post-index-item-header .LXB_TOGO-post-linked_terms-item {
@@ -95,7 +126,27 @@
         .LXB_TOGO-post-index-item-header .LXB_TOGO-post-linked_terms-item:hover {
             color: black;
             text-decoration: underline;
-        }   
+        }
+
+        .LXB_TOGO-post-index-item-main {
+            max-width: 500px;
+        }
+
+        .LXB_TOGO-post-index-item .LXB_TOGO-post-read_more {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            color: rgb(249 115 22);
+        }
+
+        .LXB_TOGO-post-index-item .LXB_TOGO-post-read_more:hover {
+            color: #000;
+            text-decoration: underline;
+        }
+
+        .LXB_TOGO-post-read_more .LXB_TOGO-icon-outer {
+            color: #000;
+        }
 
     /**
      * 3.3. Single Post
@@ -145,6 +196,19 @@
             width: 100%;
             display: flex;
         }
+
+        .LXB_TOGO-pagination a {
+            color: rgb(249 115 22);
+        }
+
+        .LXB_TOGO-pagination a .LXB_TOGO-icon-outer {
+            color: #000;
+        }        
+
+        .LXB_TOGO-pagination a:hover {
+            color: #000;
+            text-decoration: underline;
+        }   
 
     /**
      * 3.5. Icon Links
