--- a/fr/assets/css/lxb_togo.css
+++ b/fr/assets/css/lxb_togo.css
@@ -11,6 +11,7 @@
  *     3.6. Pagination 
  *     3.7. Icon Links
  *     3.8. Subscribe
+ *     3.9. Search     
  */
 
 /**
@@ -65,6 +66,11 @@
             color: rgb(249 115 22);
         }
 
+        .LXB_TOGO-image-figure {
+            display: grid;
+            gap: 10px;
+        }
+
     /**
      * 3.2. Index Posts
      */
@@ -116,13 +122,17 @@
 
         .LXB_TOGO-post-index-item .LXB_TOGO-image-img {
             border-radius: 10px;
+            height: auto;
+        }        
+
+        .LXB_TOGO-post-index-item > .LXB_TOGO-image-img {
             width: 20%;
             order: 2;
         }
 
-        .LXB_TOGO-posts-index-inner .LXB_TOGO-post-index-item:first-child .LXB_TOGO-image-img {
+        .LXB_TOGO-posts-index-inner .LXB_TOGO-post-index-item:first-child > .LXB_TOGO-image,
+        .LXB_TOGO-posts-index-inner .LXB_TOGO-post-index-item:first-child > .LXB_TOGO-image-img {
             width: 40%;
-            height: auto;
         }
 
         .LXB_TOGO-post-index-item-header .LXB_TOGO-post-linked_terms-item {
@@ -419,6 +429,9 @@
             padding: 5px 25px;
         }
 
+        .LXB_TOGO-subscribe_form-input:focus {
+            outline: 2px solid rgb(249 115 22);
+        }  
 
         .LXB_TOGO-subscribe-result_and_form,
         .LXB_TOGO-subscribe_form-input_and_button {
@@ -428,6 +441,61 @@
 
         .LXB_TOGO-subscribe-result-title {
             font-weight: 600;
+        }
+
+    /**
+     * 3.9. Search
+     */
+    
+        .LXB_TOGO-inner-search {
+            padding: 60px 0;
+        }
+
+        .LXB_TOGO-search {
+            display: grid;
+            gap: 30px;           
+        }
+
+        .LXB_TOGO-search-title {
+            font-size: 30px;
+            line-height: 36px;
+            letter-spacing: 0.25px;
+            font-weight: 600;
+        }
+
+        .LXB_TOGO-search-form {
+            display: grid;
+            gap: 30px;
+        }
+
+        .LXB_TOGO-search-input_and_button {
+            display: flex;
+            gap: 15px;
+            align-items: center;
+        }
+
+        .LXB_TOGO-search-input {
+            background: #E0E2E5;
+            border-radius: 30px;
+            padding: 5px 25px;
+        }
+
+        .LXB_TOGO-search-input:focus {
+            outline: 2px solid rgb(249 115 22);
+        }        
+
+        .LXB_TOGO-search-button-text {
+            display: none;
+        }
+
+        .LXB_TOGO-icon-outer {
+            width: 26px;
+            display: block;
+        }
+
+        .LXB_TOGO-search-results {
+            display: grid;
+            gap: 30px;           
         }
 
 
